--- a/apps/blog/templates/blog/author/dashboard_home.html
+++ b/apps/blog/templates/blog/author/dashboard_home.html
@@ -1,4 +1,5 @@
 {% extends 'dashboard/dashboard_base.html' %}
+{% load compress %}
 {% load static %}
 {% load only_hours %}
 
@@ -6,11 +7,14 @@
     Home
 {% endblock %}
 
+{% compress css %}
+
 {% block stylesheets %}
      {{ block.super }}
         <link href="{% static 'dashboard/author/css/dashboard-article.css' %}" rel="stylesheet" />
 {% endblock stylesheets %}
 
+{% endcompress %}
 {% block content %}
 
        <div class="container-fluid">
