--- a/apps/blog/templates/blog/author/article_update_form.html
+++ b/apps/blog/templates/blog/author/article_update_form.html
@@ -8,13 +8,9 @@
 
 {% block stylesheets %}
      {{ block.super }}
-        <link href="{% static 'dashboard/author/css/dashboard.css' %}" rel="stylesheet" />
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
         <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
-                <link href="{% static 'ckeditor/plugins/codesnippet/lib/highlight/styles/default.css' %}" rel="stylesheet">
 
-                <script src="{% static 'ckeditor/plugins/codesnippet/lib/highlight/highlight.pack.js' %}"></script>
             
 {% endblock stylesheets %}
 
@@ -40,7 +36,7 @@
 
                 <div class="form-group float-right">
 
-                    <button class="btn btn-dark" name="action"
+                    <button class="btn btn-danger" name="action"
                             value="SAVE_AS_DRAFT" type="submit">SAVE AS DRAFT</button>
 
                     <button class="btn btn-primary" name="action" value="PUBLISH"
