--- a/apps/blog/templates/blog/author/author_published_article_list.html
+++ b/apps/blog/templates/blog/author/author_published_article_list.html
@@ -1,5 +1,6 @@
 {% extends 'author_base.html' %}
 {% load static %}
+{% load compress %}
 {% load only_hours %}
 
 {% block title %}
@@ -7,8 +8,11 @@
 {% endblock title %}
 
 {% block stylesheets %}
-     {{ block.super }}
+{{ block.super }}
+
+{% compress css %}
         <link href="{% static 'dashboard/author/css/dashboard-article.css' %}" rel="stylesheet" />
+ {% endcompress %}
 {% endblock stylesheets %}
 
 
@@ -138,3 +142,5 @@
             </div>
     </div>
 {% endblock content %}
+{% block javascripts %}
+{% endblock javascripts %}
