--- a/apps/blog/templates/blog/article/article_detail.html
+++ b/apps/blog/templates/blog/article/article_detail.html
@@ -1,12 +1,17 @@
 {% extends 'blog_base.html' %}
 {% load static %}
-'
+{% load compress %}
+
+
+
 {% block stylesheet %}
     {{ block.super }}
-	
+	{% compress css %}
 	<link rel="stylesheet" href="/static/assets/css/blog/post-detail/styles.css" type="text/css">
 
 	<link rel="stylesheet" href="/static/assets/css/blog/post-detail/responsive.css" type="text/css">
+	
+	{% endcompress %}
 {% endblock stylesheet %}
 
 
@@ -99,7 +104,10 @@
 						<figure class="post-image">
 							<img class="article-image"
 							 src="{{ article.image.url }}" 
-							style="height: 30rem;"
+							style="
+							border-radius:50px;
+							
+							"
 							 alt="Blog Image">
 							 
 				       {% if article.image_credit %}
@@ -160,7 +168,26 @@
 		</div><!-- container -->
 	</section>
 	{% include "includes/blog_footer.html" %}
+
+{% compress css %}
+
 <style>
+	@media (max-width: 991px	) {
+		.article-image {
+		  width: 95%;
+		  width:90%;
+			margin-left:1rem;
+			height: 15rem
+		}
+	  }
+	  /* for medium */
+	  @media (min-width: 992px) {
+		.article-image {
+			width:93%;
+			margin-left:2rem;
+			height: 25rem;
+		}
+	  }
 	.card {
 		position: relative;
 		width: 20rem;
@@ -175,6 +202,7 @@
 		transform:scale(1.1);
 	  }
 </style>
+{% endcompress %}
 
 {% endblock content %}
 
