--- a/apps/blog/templates/blog/article/article_detail.html
+++ b/apps/blog/templates/blog/article/article_detail.html
@@ -20,15 +20,16 @@
 {% endblock %}
 
 {% block content %}
-	<div class="slider" style="height: 400px; width: 100%;
-    background-image: url({{ article.category.image.url }});
-    background-size: contain" >
-	</div><!-- slider -->
+<!-- <img id = "category-header" src="{{ article.category.image.url }}" 
+ alt=""> -->
+
+ <!-- style="height: 10rem;margin-top:4.5rem; width: 80%;" -->
 
 	<section class="post-area">
+
 		<div class="container">
 
-			<div class="row">
+			<div class="row" style="margin-top:11rem">
 
 				<div class="col-lg-1 col-md-0"></div>
 				<div class="col-lg-10 col-md-12">
@@ -57,7 +58,7 @@
 							</div>post-info -->
                            <div class="post-icons-area">
 								<ul class="post-icons">
-									<li><a><i class="ion-ios-calendar"></i>Created on {{ article.date_published.date }}</a></li>
+									<li><a><i class="ion-ios-calendar"></i> {{ article.date_published.date }}</a></li>
                                     <!-- <li><a><i class="ion-ios-paper"></i>{{ article.count_words }} word{{ article.count_words|pluralize }}</a></li> -->
 									<li><a><i class="ion-ios-clock"></i>{{ article.read_time }} min{{ article.read_time|pluralize }} read</a></li>
 									<li><a><i class="ion-chatbubbles"></i>{{ article.comments.count }} comment{{ article.comments.count|pluralize }}</a></li>
@@ -172,6 +173,7 @@
 {% compress css %}
 
 <style>
+	
 	@media (max-width: 991px	) {
 		.article-image {
 		  width: 95%;
@@ -187,6 +189,10 @@
 			margin-left:2rem;
 			height: 25rem;
 		}
+	  }
+	  img .category-header{
+		height: 5rem;margin-top:4.5rem; width: 80%;
+
 	  }
 	.card {
 		position: relative;
