--- a/apps/blog/templates/blog/article/home.html
+++ b/apps/blog/templates/blog/article/home.html
@@ -108,7 +108,7 @@ Home
                         <!-- <img class=" d-md-flex mb-3" src="{{ article.image.url }}"   style="border-radius:15px;" width="330" height="250" alt="image"> -->
 
                         <h3 class="title mb-1"><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h3>
-                        <div class="meta mb-1"><span class="date"><b>Published:</b> <i>{{ article.date_published|date:'M d, Y'}}</i></span>
+                        <div class="meta mb-1"><span class="date"><b></b> <i>{{ article.date_published|date:'M d, Y'}}</i></span>
                           <span class="time">{{ article.count_words }} word{{ article.count_words|pluralize }}</span>
                           <span class="time">{{ article.read_time }} min{{ article.read_time|pluralize }} read</span>
                           <span class="view">{{ article.views }} view{{ article.views|pluralize }}</span>
