--- a/core/apps/blog/templates/blog/article/home.html
+++ b/core/apps/blog/templates/blog/article/home.html
@@ -31,19 +31,19 @@ Home
       {% for category,article_count in categories %}
 
 
-      <div class="swiper-slide" >
+      <div class="swiper-slide" style="padding: 2rem 0rem;">
         <a class="slider-category" href="{{ category.get_absolute_url }}">
-          <div class="blog-image">
+          <!-- <div class="blog-image">
             <img src="{{ category.image.url }}" class="category-image" alt="Blog Image"  width="290" height="180">
 
-          </div>
+          </div> -->
 
           <div class="category">
             <div class="display-table center-text">
-              <div class="display-table-cell">
-                <h3><b>{{ category.name }}</b></h3>
-                <h5><b>{{ article_count }} articles</b></h5>
-               
+              <div class="display-table-cell bg-white">
+                <h3 class="text-dark"><b>{{ category.name }}</b></h3>
+                <!-- <h5 class="text-dark"><b>{{ article_count }} articles</b></h5> -->
+                <h5 class="badge text-uppercase text-white" style="background-color: #5E72E4;" href="javascript:void(0)"><strong>{{ article_count }} articles</strong></h5>
               </div>
             </div>
           </div>
@@ -241,7 +241,7 @@ Home
     observer: true,
     observeParents: true,
     direction: 'horizontal',
-    loop: true,
+    loop: false,
     slidesPerView: 'auto',
     spaceBetween: 1,
  
