--- a/core/templates/home/page-500.html
+++ b/core/templates/home/page-500.html
@@ -1,43 +1,125 @@
-{% extends 'author_base.html' %}
 
-{% block title %} Error 404 {% endblock title %}
 
-<!-- Specific CSS goes HERE -->
-{% block stylesheets %}{% endblock stylesheets %}
 
-{% block content %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>500 Error</title>
+    <!-- Bootstrap core CSS -->
+    <link href="{% static '/assets/css/bootstrap/bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  </head>
 
-    <!-- Page content -->
-    <div class="container mt--8 pb-5">
-      <div class="row justify-content-center">
-        <div class="col-lg-5 col-md-7">
-          <div class="card bg-secondary shadow border-0">
-            <div class="card-header bg-transparent pb-5">
+  <body>
 
-              <div class="text-muted text-center mt-2 mb-3">
-                Oups! Error 500      
-              </div>
+  <div class="container">
+    <div class="row">
 
-              <div class="text-center mb-4">
-                Server error, please contact support - <a href="/">Home</a>.
-              </div>
+      <div class="col-md-12">
+        <h1><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> 500</h1>
+        <h2>Server error, please contact support - <a href="/">Home</a>.</h2>
+        <br>
+          <!-- <form action="#" method="post">
+            <input type="text" placeholder="Search..." name="search">
+            <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+          </form> -->
 
-            </div>
-          </div>
-          <div class="row mt-3">
-            <div class="col-6">
-              <a href="/" class="text-light"><small>Home</small></a>
-            </div>
-            <div class="col-6 text-right">
-              <a target="_blank" 
-                 href="" class="text-light"><small>Get Support</small></a>
-            </div>
-          </div>
+        <p>If you think you have arrived here by our mistake, please <a href="{% url 'authentication:email_sent' %}">contact us</a></p>
+<br>
+          <a href="{% url 'blog:home' %}" class="btn btn-sm text-white" style="background-color:#5E72E4 ;">Go Back Home</a>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <!-- &copy; 2022 All Rights Reserved <a href="" target="_blank">Footer</a> -->
         </div>
       </div>
     </div>
+  </footer>
 
-{% endblock content %}
 
-<!-- Specific JS goes HERE --> 
-{% block javascripts %}{% endblock javascripts %}
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+   <style>
+     /* Base */
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Ubuntu', sans-serif;
+  line-height: 18px;
+  color: #707070;
+  background: url(../img/bg.jpg) no-repeat 50%;
+  background-size: cover;
+  background-attachment: fixed;
+  text-align: center; }
+
+.container {
+  margin-top: 8%; }
+
+a {
+  color: #5E72E4; }
+
+a:hover {
+  color: #5E72E4;
+  text-decoration: underline; }
+
+h1 {
+  color: #5E72E4;
+  font-size: 100px; }
+
+h2 {
+  font-size: 35px; }
+
+h3 {
+  margin-top: 50px !important; }
+
+p {
+  font-size: 18px; }
+
+form {
+  margin: 50px 0; }
+
+input[type="text"] {
+  width: 50%;
+  border: 1px solid #e8e8e8;
+  padding: 10px;
+  color: #858585;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px; }
+
+button[type="submit"] {
+  background: none;
+  border: none;
+  color: #3498db;
+  margin-left: -40px;
+  font-size: 20px; }
+
+.social-networks a {
+  display: inline-block;
+  font-size: 18px;
+  margin: 5px; }
+
+footer {
+  font-size: 14px; }
+
+/* Modules */
+/* Layouts */
+
+/*# sourceMappingURL=style.css.map */
+   </style>
+  </body>
+</html>
