create context processor for navbar categories

--- a/core/apps/projects/templates/projects/project_list.html
+++ b/core/apps/projects/templates/projects/project_list.html
@@ -1,7 +1,4 @@
 
-
-
-<!-- This page contains password reset form -->
 {% extends 'blog_base.html' %}
 {% load static %}
 {% block title %}
@@ -18,12 +15,9 @@ Projects
               <div class="row justify-content-center mt-4">
                 <div class="col-lg-8">
                   <div class="card shadow-lg border-0 rounded-lg mt-5">
-        
-        
                     <!-- <div class="card-header bg-secondary" >
                       <h2 class="text-center font-weight-light my-2" >  Thanks for reaching out!</h2>
                     </div> -->
-        
                           <img src="{% static 'assets/img/coming-soon.jpg' %}" style="border-radius:1rem;;" width = "100%" alt="">
         
         
@@ -37,3 +31,9 @@ Projects
   
     </style>
 {% endblock content %}
+
+
+{% block javascripts %}
+
+{% endblock javascripts %}
+  
