--- a/core/templates/includes/blog_navbar.html
+++ b/core/templates/includes/blog_navbar.html
@@ -168,7 +168,7 @@
 
             
 
-              <div class="nav-item dropdown">
+          <div class="nav-item dropdown">
             <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle">Categories</a>
             <div id="sub-menu" class="dropdown-menu">
             
@@ -217,6 +217,6 @@
           <a href="#" class="nav-item nav-link"><i class="fa fa-pinterest-p"></i></a> -->
         </div>
       </div>
-      
+      <!-- Example split danger button -->
+
     </nav>
- 
