--- a/core/apps/blog/templates/blog/author/article_create_form.html
+++ b/core/apps/blog/templates/blog/author/article_create_form.html
@@ -31,11 +31,10 @@
                              {{article_create_form|crispy}}
                             <div class="form-group float-right">
                                 <button type="reset" class="btn btn-danger">Reset Form</button>
-                                <button class="btn btn-dark" name="action"
-                                        value="SAVE_AS_DRAFT" type="submit">SAVE AS DRAFT</button>
+                               
 
-                                <button class="btn btn-primary" name="action" value="PUBLISH"
-                                        type="submit">PUBLISH</button>
+                                <button class="btn btn-primary" name="action"
+                                        type="submit">Save</button>
                             </div>
                     </form>
             </div>
