--- a/core/apps/blog/templates/blog/author/article_update_form.html
+++ b/core/apps/blog/templates/blog/author/article_update_form.html
@@ -36,10 +36,9 @@
 
                 <div class="form-group float-right">
 
-                    <button class="btn btn-danger" name="action"
-                            value="SAVE_AS_DRAFT" type="submit">SAVE AS DRAFT</button>
+                    
 
-                    <button class="btn btn-primary" name="action" value="PUBLISH"
+                    <button class="btn btn-primary" name="action"
                             type="submit">PUBLISH</button>
                 </div>
         </form>
