Updated posts design

--- a/core/apps/blog/templates/blog/article/article_detail.html
+++ b/core/apps/blog/templates/blog/article/article_detail.html
@@ -107,6 +107,7 @@
 							 src="{{ article.image.url }}" 
 							style="
 							border-radius:50px;
+							box-shadow: 2px 4px 10px rgba(0,0,0,0.3);
 							
 							"
 							 alt="Blog Image">
