--- a/core/apps/blog/templates/blog/author/author_published_article_list.html
+++ b/core/apps/blog/templates/blog/author/author_published_article_list.html
@@ -21,126 +21,164 @@
 {% include "includes/header_body.html" %}
     <div class="container mb-3">
             <div class="row">
-                <div class="col-md-12">
-                        <div class="card shadow-sm">
-                            <div class="card-header">
-                                <h4 class="title">{{title}}</h4>
+              <div class="col-md-12">
+                <br>
+              
+              
+               
+                <div class="card shadow-sm">
+                  <!-- <div class="card-header">
+                      <h4 class="title">{{title}}</h4>
+                    </div> -->
+              
+                  <div class="card-body">
+              
+              
+                    <div class="content">
+                      <section class="blog-list">
+              
+                        {% if published_articles_list %}
+                        <div class="container">
+              
+                          {% for article in published_articles_list %}
+                          <div class="item px-3 mb-3 pt-3  bg-white" style="border-radius:15px;">
+                            <div class="row mb-2">
+                            
+                              <div class="col-md-4">
+                                <img class=" d-md-flex mb-3" src="{{ article.image.url }}" style="border-radius:15px;box-shadow: 2px 4px 10px rgba(0,0,0,0.3);" alt="image">
+                              </div>
+                              <div class="col-md-8">
+                                <div class="media">
+                                  <div class="media-body">
+                                    <!-- <img class=" d-md-flex mb-3" src="{{ article.image.url }}"   style="border-radius:15px;" width="330" height="250" alt="image"> -->
+              
+                                    <h3 class="title mb-1"><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h3>
+                                    <div class="meta mb-1"><span class="date"><b></b> <i>{{ article.date_published|date:'M d, Y'}}</i></span>
+                                      <span class="time">{{ article.count_words }} word{{ article.count_words|pluralize }}</span>
+                                      <span class="time">{{ article.read_time }} min{{ article.read_time|pluralize }} read</span>
+                                      <span class="view">{{ article.views }} view{{ article.views|pluralize }}</span>
+                                      <a class="btn btn-xs btn-primary text-white" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Action 
+                                      <i class="fas fa-chevron-down" > </i>
+
+                                      </a>
+                                      <div class="dropdown-menu">
+                                          <a class="dropdown-item" href="{% url 'blog:article_update' slug=article.slug %}">Edit Article</a>
+                                          <div class="dropdown-divider w-100" ></div>
+                                          <a data-toggle="modal" data-target="#deleteModal" class="dropdown-item" href="javascript:void(0)">Delete Article</a>
+                                      </div>
+                                      <!-- <span class="comment"><a href="#">{{ article.comments.count }} comment{{article.comments.count|pluralize }}</a></span> -->
+              
+                                    </div>
+                                    <ul class="tags my-2">
+                                      {% for tag in article.tags.all %}
+                                      <li><a class="badge text-uppercase text-white" style="background-color: #5E72E4;"
+                                          href="javascript:void()">{{ tag.name }}</a></li>
+              
+                                      <!-- <li><a  class="badge text-uppercase text-white" style="background-color: #5E72E4;" href="{% url 'blog:tag_articles' tag_name=tag.name %}">{{ tag.name }}</a></li> -->
+                                      {% endfor %}
+                                    </ul>
+                                    <a class="more-link " href="{{ article.get_absolute_url }}"><i class="fas fa-1x fa-eye"></i>
+                                      View
+                                      article </a>
+                                  </div>
+              
+                                  <!--//media-body-->
+                                </div>
+                              </div>
+                            
+                              <!--//media-->
                             </div>
-                          <div class="card-body">
-                            <div class="content">
-                                     <section class="blog-list px-3 py-5 p-md-5">
-                                     {% if published_articles_list %}
-                                            <div class="container">
-                                           {% for article in published_articles_list  %}
-                                                <div class="item mb-5">
-                                                    <div class="media">
-                                                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="{{ article.image.url }}" alt="image">
-                                                        <div class="media-body">
-                                                            <h3 class="title mb-1"><a href="{% url 'blog:dashboard_article_detail' slug=article.slug %}">{{ article.title }}</a></h3>
-                                                            <div class="meta mb-1"><span class="date"><b>Published:</b> <i>{{ article.date_published|timesince|upto:','}} ago</i></span>
-                                                                <span class="time">{{ article.count_words }} word{{ article.count_words|pluralize }}</span>
-                                                                <span class="time">{{ article.read_time }} min{{ article.read_time|pluralize }} read</span>
-                                                                <span class="comment">{{ article.views }} view{{ article.views|pluralize }}</span>
-                                                                <span class="comment"><a href="#">{{ article.comments.count }} comment{{ article.comments.count|pluralize }}</a></span>
-                                                                <span class="time">
-                                                                <i class="fas fa-chevron-down" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                                </i>
-                                                                <div class="dropdown-menu">
-                                                                    <a class="dropdown-item" href="{% url 'blog:article_update' slug=article.slug %}">Edit Article</a>
-                                                                    <div class="dropdown-divider w-100" ></div>
-                                                                    <a data-toggle="modal" data-target="#deleteModal" class="dropdown-item" href="javascript:void(0)">Delete Article</a>
-                                                                </div>
-                                                              </span>
-                                                            </div>
-                                                            <a class="more-link" href="{% url 'blog:dashboard_article_detail' slug=article.slug %}">View details &rarr;</a>
-                                                          <hr class="solid"><!-- Solid divider -->
-                                                        </div><!--//media-body-->
-                                                    </div><!--//media-->
-                                                </div><!--//item-->
-                                               <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                          <div class="modal-dialog" role="document">
-                                            <div class="modal-content">
-                                              <div class="modal-header">
-                                                  <h5 class="modal-title" id="exampleModalLabel"><b>Delete article.</b></h5>
-                                                <button
-                                                  class="close"
-                                                  type="button"
-                                                  data-dismiss="modal"
-                                                  aria-label="Close"
-                                                >
-                                                  <span aria-hidden="true">×</span>
-                                                </button>
-                                              </div>
-                                              <div class="modal-body">
-                                                Are you sure want  to delete article?
-                                              </div>
-                                              <div class="modal-footer">
-                                                <button
-                                                  class="btn btn-secondary"
-                                                  type="button"
-                                                  data-dismiss="modal"
-                                                >
-                                                  Cancel
-                                                </button>
-                                                <a class="btn btn-danger" href="{% url 'blog:article_delete' slug=article.slug %}">Confirm</a>
-                                              </div>
-                                            </div>
-                                          </div>
-                                        </div>
-                                         {% endfor %}
-                                            </div>
-                                     {% else %}
-                                               <center><div class="alert alert-info"><b>No Published Articles</b></div></center>
-                                     {% endif %}
-                                        </section>
-
-                                                {# Pagination for article post #}
-                                        <nav aria-label="Page navigation example">
-                                        {% if published_articles_list.has_other_pages %}
-                                          <ul class="pagination justify-content-center">
-                                          {% if published_articles_list.has_previous %}
-                                            <li class="page-item">
-                                              <a class="page-link" href="?page={{ published_articles_list.previous_page_number }}"
-                                                 tabindex="-1">Prev</a>
-                                            </li>
-                                          {% else %}
-                                            <li class="page-item disabled">
-                                             <span class="page-link">Prev</span>
-                                            </li>
-                                             {% endif %}
-                                            {% for i in published_articles_list.paginator.page_range %}
-                                            {% if published_articles_list.number == i %}
-                                                <li class="page-item active">
-                                              <span class="page-link">
-                                                {{ i }}
-                                                <span class="sr-only">(current)</span>
-                                              </span>
-                                            </li>
-                                        {% else %}
-                                           <li class="page-item">
-                                               <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                                           </li>
-                                            {% endif %}
-
-                                            {% endfor %}
-                                            {% if published_articles_list.has_next %}
-                                                <li class="page-item">
-                                              <a class="page-link" href="?page={{ published_articles_list.next_page_number }}">Next</a>
-                                            </li>
-                                            {% else %}
-                                             <li class="page-item disabled">
-                                             <span class="page-link">Next</span>
-                                            </li>
-                                              {% endif %}
-                                      </ul>
-                                        {% endif %}
-                                    </nav>
+                            <!--//item-->
+                          
+                          </div>
+                          <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel"><b>Delete article.</b></h5>
+                                  <button
+                                    class="close"
+                                    type="button"
+                                    data-dismiss="modal"
+                                    aria-label="Close"
+                                  >
+                                    <span aria-hidden="true">×</span>
+                                  </button>
+                                </div>
+                                <div class="modal-body">
+                                  Are you sure want  to delete article?
+                                </div>
+                                <div class="modal-footer">
+                                  <button
+                                    class="btn btn-secondary"
+                                    type="button"
+                                    data-dismiss="modal"
+                                  >
+                                    Cancel
+                                  </button>
+                                  <a class="btn btn-danger" href="{% url 'blog:article_delete' slug=article.slug %}">Confirm</a>
+                                </div>
+                              </div>
                             </div>
                           </div>
+                          {% endfor %}
+              
                         </div>
+              
+              
+              
+                        {% endif %}
+                      </section>
+              
+                               {# Pagination for article post #}
+                                                      <nav aria-label="Page navigation example">
+                                                      {% if published_articles_list.has_other_pages %}
+                                                        <ul class="pagination justify-content-center">
+                                                        {% if published_articles_list.has_previous %}
+                                                          <li class="page-item">
+                                                            <a class="page-link" href="?page={{ published_articles_list.previous_page_number }}"
+                                                               tabindex="-1">Prev</a>
+                                                          </li>
+                                                        {% else %}
+                                                          <li class="page-item disabled">
+                                                           <span class="page-link">Prev</span>
+                                                          </li>
+                                                           {% endif %}
+                                                          {% for i in published_articles_list.paginator.page_range %}
+                                                          {% if published_articles_list.number == i %}
+                                                              <li class="page-item active">
+                                                            <span class="page-link">
+                                                              {{ i }}
+                                                              <span class="sr-only">(current)</span>
+                                                            </span>
+                                                          </li>
+                                                      {% else %}
+                                                         <li class="page-item">
+                                                             <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                                                         </li>
+                                                          {% endif %}
+              
+                                                          {% endfor %}
+                                                          {% if published_articles_list.has_next %}
+                                                              <li class="page-item">
+                                                            <a class="page-link" href="?page={{ published_articles_list.next_page_number }}">Next</a>
+                                                          </li>
+                                                          {% else %}
+                                                           <li class="page-item disabled">
+                                                           <span class="page-link">Next</span>
+                                                          </li>
+                                                            {% endif %}
+                                                    </ul>
+                                                      {% endif %}
+                                                  </nav>
+                    </div>
+                  </div>
                 </div>
+              </div>
             </div>
     </div>
 {% endblock content %}
 {% block javascripts %}
 {% endblock javascripts %}
+
+
