--- a/core/apps/blog/templates/blog/article/article_home.html
+++ b/core/apps/blog/templates/blog/article/article_home.html
@@ -52,21 +52,36 @@ Home
                 <div class="row mb-2">
                 
                   <div class="col-md-4">
-                    <img class=" d-md-flex mb-3" src="{{ article.image.url }}" style="border-radius:15px;" alt="image">
+                    <img class=" d-md-flex mb-3" src="{{ article.image.url }}" 
+                    style="border-radius:15px;
+                    height:14rem;
+                    box-shadow: 2px 4px 10px rgba(0,0,0,0.3);" 
+                    alt="image">
                   </div>
                   <div class="col-md-8">
                     <div class="media">
                       <div class="media-body">
                         <!-- <img class=" d-md-flex mb-3" src="{{ article.image.url }}"   style="border-radius:15px;" width="330" height="250" alt="image"> -->
 
-                        <h3 class="title mb-1"><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h3>
-                        <div class="meta mb-1"><span class="date"><b></b> <i>{{ article.date_published|date:'M d, Y'}}</i></span>
-                          <span class="time">{{ article.count_words }} word{{ article.count_words|pluralize }}</span>
-                          <span class="time">{{ article.read_time }} min{{ article.read_time|pluralize }} read</span>
-                          <span class="view">{{ article.views }} view{{ article.views|pluralize }}</span>
+                        <h3 class="title mb-3 text-primary"><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h3>
+                        <div class="meta mb-2">
+                          <ul class="post-icons">
+                            <li><i class="fas fa-sm fa-calendar"></i> {{ article.date_published.date }}</li>
+                                              <!-- <li><a><i class="ion-ios-paper"></i>{{ article.count_words }} word{{ article.count_words|pluralize }}</a></li> -->
+                            <li class="ml-2"><i class="fas fa-sm fa-clock"></i> {{ article.read_time }} min{{ article.read_time|pluralize }} read</li>
+                            <li class="ml-2"><a><i class="fas fa-sm fa-comment"></i> {{ article.comments.count }} comments{{ article.comments.count|pluralize }}</a></li>
+                            <li class="ml-2"><i class="fas fa-sm fa-eye"></i> {{ article.views }} view{{ article.views|pluralize }}</li>
+                          </ul>
+          
                           <!-- <span class="comment"><a href="#">{{ article.comments.count }} comment{{article.comments.count|pluralize }}</a></span> -->
 
                         </div>
+                        <hr>
+                      <span>
+                        {{ article.body|safe|truncatechars_html:240 }} 
+                        <a  href="{{ article.get_absolute_url }}" class="text-primary"><i class="fas fa-sm fa-eye"></i>
+                          View More </a>
+                      </span>
                         <ul class="tags my-2">
                           {% for tag in article.tags.all %}
                           <li><a class="badge text-uppercase text-white" style="background-color: #5E72E4;"
@@ -75,9 +90,7 @@ Home
                           <!-- <li><a  class="badge text-uppercase text-white" style="background-color: #5E72E4;" href="{% url 'blog:tag_articles' tag_name=tag.name %}">{{ tag.name }}</a></li> -->
                           {% endfor %}
                         </ul>
-                        <a class="more-link " href="{{ article.get_absolute_url }}"><i class="fas fa-1x fa-eye"></i>
-                          View
-                          article </a>
+                       
                       </div>
 
                       <!--//media-body-->
